--- a/book.bib
+++ b/book.bib
@@ -76,3 +76,17 @@
   year={2018},
   publisher={Elsevier}
 }
+
+@book{nocedal2006numerical,
+  title={Numerical optimization},
+  author={Nocedal, Jorge and Wright, Stephen},
+  year={2006},
+  publisher={Springer Science \& Business Media}
+}
+
+@book{boyd2004convex,
+  title={Convex optimization},
+  author={Boyd, Stephen and Vandenberghe, Lieven},
+  year={2004},
+  publisher={Cambridge university press}
+}
